# claude-engineer-rs

./: .gitignore  Cargo.toml  README.md  prompt.txt  text.txt
src/: conversation_manager.rs  github_tools.rs  language_documentation.rs  language_documentation_tests.rs  main.rs  prompts.rs  test_regex.rs  tool_executor.rs  tools.rs
