[package]
name = "claude-engineer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anthropic-sdk = { path = "../anthropic-sdk" }
uuid = { version = "1.3", features = ["v4"] }
dotenv = "0.15.0"
dirs = "5.0.1"
anyhow = "1.0.86"
inquire = { version = "0.7.5", features = ["editor"] }
