[package]
name = "claude-engineer-rs"
version = "0.1.0"
edition = "2021"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anthropic-sdk = { git = "https://github.com/digitalmnt/anthropic-sdk.git" }
uuid = { version = "1.3", features = ["v4"] }
dotenv = "0.15.0"
dirs = "5.0.1"
anyhow = "1.0.86"
inquire = { version = "0.7.5", features = ["editor"] }
once_cell = "1.19.0"
syntect = "5.0"
similar = "2.5.0"
tavily = "1.0.0"
async-recursion = "1.1.1"
tempfile = "3.10.1"
octocrab = "0.38.0"
mockall = "0.13.0"
async-trait = "0.1.81"
reqwest = "0.12.5"
log = "0.4.22"
env_logger = "0.11.4"
lazy_static = "1.4"
regex = "1.5"
console = "0.15"
dialoguer = "0.10"
diff = "0.1.13"
chrono = "0.4.38"
scraper = "0.20.0"
openai-api-rs = "5.0.4"
